--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site title and subtitle. This is used in _includes/header.html
-title: 'Robot-Soccer-Simulator'
+title: 'Robot Soccer Simulator - ROSOS'
 subtitle: 'An Open-Source Soccer simulator for virtual robots tournaments'
 
 # if you wish to integrate disqus on pages set your shortname here
@@ -15,7 +15,7 @@ google_analytics_id: ''
 navigation: 2
 
 # URL to source code, used in _includes/footer.html
-codeurl: 'http://ivanseidel.github.io/Robot-Soccer-Simulator/'
+codeurl: 'https://github.com/ivanseidel/Robot-Soccer-Simulator'
 
 # Default categories (in order) to appear in the navigation
 sections: [
@@ -28,7 +28,7 @@ sections: [
 
 # Keep as an empty string if served up at the root. If served up at a specific
 # path (e.g. on GitHub pages) leave off the trailing slash, e.g. /my-project
-baseurl: ''
+baseurl: '/Robot-Soccer-Simulator'
 
 # Dates are not included in permalinks
 permalink: none
